# lorekeep

./: .gitignore  FREEZE_NOTES.md  README.md  README.zh-CN.md  e2e_benchmark.py  extract_sqlite.py  main.py  nsys_hetero_profiling.py  pyproject.toml  requirements.txt  sitecustomize.py  test-new.py  wave_slice_metrics_final.csv  wave_slice_zero_padding_barrier.nsys-rep
config/: __init__.py  experiment_catalog.py  hw_config.py
data/: __init__.py
docs/: current_method.md  openworkload_v1_lora8_runtime_adaptive_results.md
engine/: __init__.py  base_slicer.py  lora_unbinder.py  runtime_bootstrap.py  vllm_hijacker.py
example/: hf_mistral_dual_stream.py  hf_two_models_dual_stream.csv  hf_two_models_dual_stream.py  hf_two_models_poisson.csv  hf_two_models_poisson.py  plot_results.py  test_gpu_stats.py  vllm_mistral_benchmark.py  vllm_mistral_dual_stream.py
experiments/: __init__.py  analyze_workload_features.py  build_checkpoint_luts.py  build_dataset_workload.py  build_hybrid_checkpoint_runtime_luts.py  chapter2_e1_strict_reference.py  chapter2_obs1_quick.py  chapter2_observations.py  chapter2_prestudy.py  debug_v1_cuda_init.py  local_resources.py  lut_fingerprint.py  model_assets.py  observe_escape_lane.py  openworkload_models.py  openworkload_results.py  openworkload_support.py  plot_chapter2_boundary_figures.py  poisson_dataset_density_sweep.py  profile_real_model_metadata.py  remix_dataset_workload.py  run_chapter5_baseline_variants.py  run_chapter5_suite.py  run_environment_preflight.py  run_frozen_eval_config.py  run_openworkload_execescape_serial.py  (+5 more)
(+265 files in other folders)
